plus de mots autorisés, favicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>LOTUS</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"/>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <link rel="manifest" href="favicons/site.webmanifest">
 </head>
 
 <body>
@@ -22,7 +26,8 @@
         <audio preload src="sons/lettre-bien-place.wav" id="sonLettreBienPlacee"></audio>
     </div>
 
-    <script src="mots.js" charset="UTF-8"></script>
+    <script src="motsATrouver.js" charset="UTF-8"></script>
+    <script src="motsAutorises.js" charset="UTF-8"></script>
     <script src="script.js" charset="UTF-8"></script>
 </body>
 </html>
