--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <main class="container">
-        <h1>LOTUS</h1>
+        <h1>L<img src="favicons/favicon-32x32.png" alt="O">TUS</h1>
         <div id="grille"></div>
     </main>
 
