--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
         <audio preload src="sons/lettre-non-trouve.wav" id="sonLettreNonTrouvee"></audio>
         <audio preload src="sons/lettre-mal-place.wav" id="sonLettreMalPlacee"></audio>
         <audio preload src="sons/lettre-bien-place.wav" id="sonLettreBienPlacee"></audio>
+        <audio preload src="sons/mot-trouve.mp3" id="sonMotTrouve"></audio>
+        <audio preload src="sons/perdu.mp3" id="sonPerdu"></audio>
     </div>
 
     <script src="motsATrouver.js" charset="UTF-8"></script>
