serviceWorker in html

--- a/index.html
+++ b/index.html
@@ -85,5 +85,6 @@
     <script src="motsATrouver.js" charset="UTF-8"></script>
     <script src="motsAutorises.js" charset="UTF-8"></script>
     <script src="script.js" charset="UTF-8"></script>
+    <script>navigator?.serviceWorker.register('service-worker.js')</script>
 </body>
 </html>
