--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <dialog id="optionsDialog" open>
         <article>
             <header>
-                <h2>L<img src="icones/lotus.svg" alt="O">TUS</h2>
+                <h2>L<img src="icones/lotus.svg" alt="🪷">TUS</h2>
             </header>
             <form id="optionsForm" action="#" method="dialog">
                 <fieldset>
@@ -48,7 +48,7 @@
             </form>
             <footer>
                 <button id="confirmOptionsButton" type="submit" form="optionsForm" disabled>
-                    <div aria-busy="true"></div>
+                    <span aria-busy="true"></span> Chargement...
                 </button>
             </footer>
         </article>
@@ -64,9 +64,9 @@
                 </li>
             </ul>
             <ul>
-                <li><h1>L<img src="icones/lotus.svg" alt="O">TUS</h1></li>
+                <li><h1>L<img src="icones/lotus.svg" alt="🪷">TUS</h1></li>
             </ul>
-          <ul></ul>
+            <ul></ul>
         </nav>
     </header>
 
