--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <link rel="apple-touch-icon" sizes="180x180" href="icones/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icones/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icones/favicon-16x16.png">
+    <meta property="og:title" content="L🪷TUS"/>
+    <meta property="og:type" content="game"/>
+    <meta property="og:url" content="https://adrien.malingrey.fr/jeux/lotus/"/>
+    <meta property="og:image" content="https://adrien.malingrey.fr/jeux/lotus/thumbnail.png"/>
+    <meta property="og:image:width" content="378"/>
+    <meta property="og:image:height" content="383"/>
+    <meta property="og:description" content="Devinez le mot dans cette adaptation d'un jeu télé"/>
+    <meta property="og:locale" content="fr_FR"/>
+    <meta property="og:site_name" content="adrien.malingrey.fr"/>
     <link rel="manifest" href="site.webmanifest">
+    <script>navigator?.serviceWorker.register('service-worker.js')</script>
 </head>
 
 <body>
@@ -85,6 +95,5 @@
     <script src="motsATrouver.js" charset="UTF-8"></script>
     <script src="motsAutorises.js" charset="UTF-8"></script>
     <script src="script.js" charset="UTF-8"></script>
-    <script>navigator?.serviceWorker.register('service-worker.js')</script>
 </body>
 </html>
