--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <form id="optionsForm" action="#" method="dialog">
                 <fieldset>
                     <label class="option">
-                        Trouvez des noms communs ou abjectifs de
+                        Trouvez des mots de
                         <input type="number" id="nbLettresInput" min="6" max="10" value="8" size="2" step="1" required/>
                         lettres.
                     </label>
